 * Much more robust handling of relative/absolute paths. Improved support
   for Windows. (Leslie Perez, Manuel López-Ibáñez)

 * Provide better error messages for incorrect parameter
   descriptions. Examples:

   x "" i (0, 0)       # lower and upper bounds are the same
   x "" r (1e-4, 5e-4) # given digits=2, ditto
   x "" i (-1, -2)     # lower bound must be smaller than upper bound
   x "" c ("a", "a")   # duplicated values
   
 
 * Print elapsed time for calls to hook-run if debugLevel >=1.

1.04

 * Replace obsolete package multicore by package parallel
   (requires R >= 2.14.0)

 * Use load-balancing (mc.preschedule = FALSE) in mclapply.

1.03

 * Use reg.finalizer to finish Rmpi properly without clobbering
   .Last().

 * Remove uses of deprecated as.real().

 * Nicer error handling in readParameters.

 * Add hypervolume (multi-objective) example.

 * Fix several bugs in the computation of similar candidates.

1.02

 * More concise output.

 * The parameters expName and expDescription are now useless and they
   were removed.

 * Faster computation of similar candidates (Jeremie Dubois-Lacoste
   and Leslie Perez).

 * Fix bug when saving instances in tunerResults$experiments.

 * irace.cmdline ("--help") does not try to quit R anymore.

1.01

 * Fix bug caused by file.exists (and possibly other functions)
   not handling directory names with a trailing backslash or slash on
   Windows.
 
 * Fix bug using per-instance parameters (Leslie Perez).

 * Fix bug when reading initial candidates from a file.