@@ -117,5 +117,8 @@
 ## of the probabilistic model.
 # softRestart <- 1
 
+## Confidence level for the elimination test.
+# confidence <- 0.95
+
 ## END of configuration file
 ############################################################################
